fix home hero path for github pages

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -209,7 +209,7 @@ body:not(.home) a:focus{
 }
 /* Home hero background (forced) */
 body.home {
-  background-image: url("/images/home/hero.jpg");
+  background-image: url("../images/home/hero.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
