--- a/layouts/index.html
+++ b/layouts/index.html
@@ -11,7 +11,8 @@ a:hover, a:focus { color: red !important; }
     left: 0;
     width: 100vw;
     height: 100vh;
-    background-image: url("/images/home/hero.jpg");
+    background-image: url('{{ "images/home/hero.jpg" | relURL }}');
+
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
