--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -412,7 +412,7 @@ header.header .menu a:active {
 }
 /* Home hero background (forced) */
 body.home {
-  background-image: url("/images/home/hero.jpg");
+  background-image: url("../images/home/hero.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
