fix home hero url with absURL

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -40,7 +40,7 @@ a:hover, a:focus { color: red !important; }
   
 </div>
 
-<div class="home-bg" style="background-image:url('{{ "images/home/hero.jpg" | relURL }}');">
+<div class="home-bg" style="background-image:url('{{ "images/home/hero.jpg" | absURL }}');">
   <!-- 你的左側選單/內容 -->
 </div>
 
