home: hide TOP button + add cover hero underlay

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -40,6 +40,9 @@ a:hover, a:focus { color: red !important; }
   
 </div>
 
+<div class="home-bg-cover" style="background-image:url('{{ "images/home/hero.jpg" | relURL }}');"></div>
+
+
 <div class="home-bg" style="background-image:url('{{ "images/home/hero.jpg" | absURL }}');">
   <!-- 你的左側選單/內容 -->
 </div>
