--- a/layouts/partials/extend_head.html
+++ b/layouts/partials/extend_head.html
@@ -1,6 +1,6 @@
-<link rel="stylesheet" href="{{ "css/force.css" | relURL }}">
-<link rel="stylesheet" href="/my-artist-site/css/custom.css">
-<link rel="stylesheet" href="/css/custom.css">
+
+<link rel="stylesheet" href="{{ "css/custom.css" | relURL }}?v={{ now.Unix }}">
+
 <style>
 .work-ring-wrap{
   position: relative;
